# bedrock-agentcore-with-strands-agents

./: .gitignore  README.md  code-editor.yaml  pyproject.toml
00-strands-agents/: 00-strands-agents-getting-started.ipynb
01-bedrock-agentcore-code-interpreter/: 01-agentcore-code-interpreter.ipynb
02-bedrock-agentcore-browser/: 02-agentcore-browser-use.ipynb
03-bedrock-agentcore-identity/: 03-agentcore-identity-for-secret-retrieval.ipynb
03-bedrock-agentcore-identity-apikey/: 03-agentcore-identity-for-exa-mcp.ipynb
04-bedrock-agentcore-runtime-mcp/: 04-agentcore-runtime-for-mcp-deploy.ipynb
05-bedrock-agentcore-runtime-and-observability/: 05-agentcore-runtime-for-strands-deploy.ipynb  05-agentcore-runtime-strands-deploy.ipynb
06-bedrock-agentcore-memory/: 06-agentcore-memory.ipynb
07-bedrock-agentcore-gateway/: 07-agentcore-gateway-for-openapi.ipynb
07-bedrock-agentcore-gateway-openapi/: 07-agentcore-gateway-for-exa-openapi.ipynb  exa-openapi-spec.yaml
