[project]
name = "bedrock-agentcore-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore>=0.1.2",
    "bedrock-agentcore-starter-toolkit>=0.1.7",
    "ddgs>=9.5.4",
    "ipython>=9.5.0",
    "mcp>=1.13.1",
    "nest-asyncio>=1.5.0,<2.0.0",
    "playwright>=1.42.0,<2.0.0",
    "rich>=14.1.0",
    "strands-agents>=1.6.0",
    "strands-agents-tools>=0.2.5",
]
